rename instance to offering
