# pkg/apiserver/api/v1/instance.pb.go
@@ -145,8 +145,8 @@ func (m *InstanceList) GetItems() []*Instance {
 }
 
 type InstanceGetRequest struct {
-	// Instance - name of the offering, i.e. couchdb.eu-west-1.team-a
-	Instance string `protobuf:"bytes,1,opt,name=instance,proto3" json:"instance,omitempty"`
+	// Offering name, i.e. couchdb.eu-west-1.team-a
+	Offering string `protobuf:"bytes,1,opt,name=offering,proto3" json:"offering,omitempty"`
 	// Version of the resource
 	Version string `protobuf:"bytes,2,opt,name=version,proto3" json:"version,omitempty"`
 	// Name of the offering instance
@@ -183,9 +183,9 @@ func (m *InstanceGetRequest) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_InstanceGetRequest proto.InternalMessageInfo
 
-func (m *InstanceGetRequest) GetInstance() string {
+func (m *InstanceGetRequest) GetOffering() string {
 	if m != nil {
-		return m.Instance
+		return m.Offering
 	}
 	return ""
 }
@@ -212,8 +212,8 @@ func (m *InstanceGetRequest) GetAccount() string {
 }
 
 type InstanceDeleteRequest struct {
-	// Instance - name of the offering, i.e. couchdb.eu-west-1.team-a
-	Instance string `protobuf:"bytes,1,opt,name=instance,proto3" json:"instance,omitempty"`
+	// Offering name, i.e. couchdb.eu-west-1.team-a
+	Offering string `protobuf:"bytes,1,opt,name=offering,proto3" json:"offering,omitempty"`
 	// Version of the resource
 	Version string `protobuf:"bytes,2,opt,name=version,proto3" json:"version,omitempty"`
 	// Name of the offering instance
@@ -250,9 +250,9 @@ func (m *InstanceDeleteRequest) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_InstanceDeleteRequest proto.InternalMessageInfo
 
-func (m *InstanceDeleteRequest) GetInstance() string {
+func (m *InstanceDeleteRequest) GetOffering() string {
 	if m != nil {
-		return m.Instance
+		return m.Offering
 	}
 	return ""
 }
@@ -279,8 +279,8 @@ func (m *InstanceDeleteRequest) GetAccount() string {
 }
 
 type InstanceListRequest struct {
-	// Instance - name of the offering, i.e. couchdb.eu-west-1.team-a
-	Instance string `protobuf:"bytes,1,opt,name=instance,proto3" json:"instance,omitempty"`
+	// Offering name, i.e. couchdb.eu-west-1.team-a
+	Offering string `protobuf:"bytes,1,opt,name=offering,proto3" json:"offering,omitempty"`
 	// Version of the resource
 	Version string `protobuf:"bytes,2,opt,name=version,proto3" json:"version,omitempty"`
 	// Account indicate namespace of the project/account
@@ -318,9 +318,9 @@ func (m *InstanceListRequest) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_InstanceListRequest proto.InternalMessageInfo
 
-func (m *InstanceListRequest) GetInstance() string {
+func (m *InstanceListRequest) GetOffering() string {
 	if m != nil {
-		return m.Instance
+		return m.Offering
 	}
 	return ""
 }
@@ -361,8 +361,8 @@ func (m *InstanceListRequest) GetContinue() string {
 }
 
 type InstanceCreateRequest struct {
-	// Instance is a name of the offering, i.e. couchdb.eu-west-1.team-a
-	Instance string `protobuf:"bytes,1,opt,name=instance,proto3" json:"instance,omitempty"`
+	// Offering name, i.e. couchdb.eu-west-1.team-a
+	Offering string `protobuf:"bytes,1,opt,name=offering,proto3" json:"offering,omitempty"`
 	// Version of the resource
 	Version string    `protobuf:"bytes,2,opt,name=version,proto3" json:"version,omitempty"`
 	Spec    *Instance `protobuf:"bytes,3,opt,name=spec,proto3" json:"spec,omitempty"`
@@ -398,9 +398,9 @@ func (m *InstanceCreateRequest) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_InstanceCreateRequest proto.InternalMessageInfo
 
-func (m *InstanceCreateRequest) GetInstance() string {
+func (m *InstanceCreateRequest) GetOffering() string {
 	if m != nil {
-		return m.Instance
+		return m.Offering
 	}
 	return ""
 }
@@ -440,41 +440,42 @@ func init() {
 }
 
 var fileDescriptor_fd22322185b2070b = []byte{
-	// 540 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xbc, 0x94, 0xcd, 0x8a, 0x13, 0x41,
-	0x10, 0xc7, 0x99, 0x4c, 0x12, 0x93, 0xf6, 0xe3, 0xd0, 0xea, 0x32, 0x8c, 0x8b, 0x84, 0x41, 0x34,
-	0x7a, 0x98, 0x31, 0x51, 0x44, 0xd6, 0xf5, 0xb2, 0xab, 0x2c, 0x82, 0x22, 0x8c, 0x37, 0x6f, 0x9d,
-	0xb1, 0x5c, 0x5a, 0x27, 0xdd, 0x71, 0xba, 0x26, 0x28, 0x31, 0x17, 0x5f, 0x40, 0x41, 0x3c, 0xf8,
-	0x30, 0x3e, 0x85, 0x47, 0xaf, 0x3e, 0x88, 0x4c, 0x7f, 0x64, 0x13, 0xd7, 0xcc, 0xc2, 0x06, 0xbc,
-	0x55, 0x75, 0xd7, 0xcc, 0xef, 0x5f, 0xd5, 0xff, 0x6e, 0x72, 0x81, 0x0b, 0x85, 0x4c, 0x64, 0x10,
-	0x4f, 0x0a, 0x89, 0x92, 0xd2, 0xb7, 0xe5, 0x08, 0x32, 0x56, 0x14, 0x1c, 0x8a, 0x98, 0x4d, 0x78,
-	0x3c, 0x1d, 0x84, 0xdb, 0x87, 0x52, 0x1e, 0xe6, 0x90, 0xb0, 0x09, 0x4f, 0x98, 0x10, 0x12, 0x19,
-	0x72, 0x29, 0x94, 0xf9, 0x22, 0xbc, 0x62, 0x77, 0x75, 0x36, 0x2a, 0x5f, 0x27, 0x30, 0x9e, 0xe0,
-	0x07, 0xbb, 0x49, 0xc6, 0x80, 0xcc, 0xc4, 0x51, 0x41, 0x3a, 0x4f, 0x2c, 0x8c, 0xee, 0x90, 0x4e,
-	0xb5, 0xf3, 0x8a, 0x21, 0x0b, 0xbc, 0x9e, 0xd7, 0x3f, 0x3b, 0xbc, 0x1a, 0x1f, 0x27, 0xc7, 0xcf,
-	0x47, 0x6f, 0x20, 0xc3, 0x67, 0x80, 0x2c, 0x5d, 0xd4, 0x53, 0x4a, 0x9a, 0x6a, 0x02, 0x59, 0xd0,
-	0xe8, 0x79, 0xfd, 0x6e, 0xaa, 0x63, 0xba, 0x45, 0xda, 0x0a, 0x19, 0x96, 0x2a, 0xf0, 0xf5, 0xaa,
-	0xcd, 0xa2, 0x8f, 0xe4, 0x9c, 0x63, 0x3e, 0xe5, 0x0a, 0xe9, 0xfd, 0x63, 0xdc, 0xed, 0x7f, 0x71,
-	0xab, 0xda, 0xbf, 0xa8, 0x43, 0xd2, 0xe2, 0x08, 0x63, 0x15, 0x34, 0x7a, 0xfe, 0xba, 0xcf, 0x1c,
-	0x2a, 0x35, 0xa5, 0xd1, 0x7b, 0x42, 0xdd, 0xd2, 0x01, 0x60, 0x0a, 0xef, 0x4a, 0x50, 0x48, 0x43,
-	0xd2, 0x71, 0x43, 0xd7, 0x1a, 0xba, 0xe9, 0x22, 0xa7, 0x01, 0x39, 0x33, 0x85, 0x42, 0x71, 0x29,
-	0x6c, 0x7b, 0x2e, 0xad, 0xba, 0x16, 0x6c, 0x0c, 0xb6, 0x3f, 0x1d, 0x57, 0xd5, 0x2c, 0xcb, 0x64,
-	0x29, 0x30, 0x68, 0x9a, 0x6a, 0x9b, 0x46, 0x33, 0x72, 0xd9, 0x91, 0x1f, 0x41, 0x0e, 0x08, 0xff,
-	0x13, 0xfe, 0xc3, 0x23, 0x17, 0x97, 0xa7, 0xbe, 0x19, 0x7b, 0x89, 0xe3, 0xaf, 0x70, 0xe8, 0x35,
-	0x72, 0x3e, 0x67, 0x23, 0xc8, 0x5f, 0x40, 0x0e, 0x19, 0xca, 0xc2, 0xea, 0x58, 0x5d, 0xa4, 0x97,
-	0x48, 0x2b, 0xe7, 0x63, 0x8e, 0x41, 0xab, 0xe7, 0xf5, 0xfd, 0xd4, 0x24, 0x95, 0x96, 0x4c, 0x0a,
-	0xe4, 0xa2, 0x84, 0xa0, 0x6d, 0xb4, 0xb8, 0x3c, 0xfa, 0xee, 0x1d, 0x4d, 0x6f, 0xbf, 0x00, 0xb6,
-	0xe9, 0xf4, 0x6e, 0x5b, 0xc3, 0xfa, 0xeb, 0x0d, 0xb7, 0x70, 0x8e, 0xb1, 0xf3, 0xda, 0xd9, 0x0e,
-	0x7f, 0x35, 0x49, 0xd7, 0x15, 0x2b, 0xfa, 0xd9, 0x23, 0x4d, 0xed, 0xeb, 0x1b, 0x75, 0x3f, 0x5d,
-	0x3a, 0x83, 0xb0, 0x77, 0x52, 0x61, 0xb4, 0xfb, 0xe9, 0xe7, 0xef, 0xaf, 0x8d, 0x7b, 0xf4, 0x6e,
-	0x32, 0x1d, 0x24, 0x16, 0xab, 0x92, 0x99, 0x8d, 0xe6, 0x89, 0x6b, 0x38, 0x99, 0xb9, 0x68, 0x9e,
-	0xcc, 0x6c, 0xab, 0x73, 0xfa, 0xc5, 0x23, 0xfe, 0x01, 0x20, 0xbd, 0x5e, 0xc7, 0x39, 0xba, 0x0c,
-	0x61, 0xed, 0x34, 0xa2, 0x7d, 0xad, 0xe5, 0x21, 0x7d, 0x70, 0x1a, 0x2d, 0xc9, 0xac, 0xf2, 0xa9,
-	0x96, 0xd4, 0x36, 0x97, 0x80, 0xde, 0xac, 0xa3, 0xad, 0x5c, 0x94, 0x70, 0x2b, 0x36, 0xef, 0x5a,
-	0xec, 0xde, 0xb5, 0xf8, 0x71, 0xf5, 0xae, 0x39, 0x49, 0xb7, 0x36, 0x92, 0xf4, 0xcd, 0x23, 0x6d,
-	0xe3, 0xac, 0x7a, 0x49, 0x2b, 0xee, 0x3b, 0x61, 0x56, 0x7b, 0x5a, 0xd8, 0x6e, 0x74, 0xaa, 0x73,
-	0xdb, 0xd1, 0xbe, 0xdb, 0x6b, 0xbe, 0x6c, 0x4c, 0x07, 0xa3, 0xb6, 0x6e, 0xf9, 0xce, 0x9f, 0x00,
-	0x00, 0x00, 0xff, 0xff, 0x6f, 0xd0, 0x74, 0x8b, 0x1c, 0x06, 0x00, 0x00,
+	// 547 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xbc, 0x94, 0xdf, 0x8a, 0xd3, 0x4e,
+	0x14, 0xc7, 0x49, 0xd3, 0xf6, 0xd7, 0xce, 0x4f, 0xbd, 0x18, 0x75, 0x09, 0x71, 0x91, 0x12, 0x44,
+	0xab, 0x17, 0x89, 0xad, 0x88, 0xb2, 0xb8, 0x5e, 0xb8, 0x2b, 0x8b, 0xa0, 0x08, 0xf1, 0xce, 0xbb,
+	0x69, 0x3c, 0x2d, 0xa3, 0xe9, 0x4c, 0xcd, 0x9c, 0x14, 0xa5, 0xf6, 0xc6, 0x27, 0x50, 0x04, 0xc1,
+	0x87, 0xf1, 0x29, 0x7c, 0x00, 0x6f, 0x7c, 0x10, 0xc9, 0xfc, 0xe9, 0xb6, 0xae, 0xed, 0xc2, 0x16,
+	0xbc, 0x9b, 0x33, 0x73, 0x92, 0xcf, 0xf7, 0x9c, 0xf9, 0xce, 0x21, 0x17, 0xb8, 0x50, 0xc8, 0x44,
+	0x06, 0xf1, 0xa4, 0x90, 0x28, 0x29, 0x7d, 0x53, 0x0e, 0x20, 0x63, 0x45, 0xc1, 0xa1, 0x88, 0xd9,
+	0x84, 0xc7, 0xd3, 0x5e, 0xb8, 0x3b, 0x92, 0x72, 0x94, 0x43, 0xc2, 0x26, 0x3c, 0x61, 0x42, 0x48,
+	0x64, 0xc8, 0xa5, 0x50, 0xe6, 0x8b, 0xf0, 0x8a, 0x3d, 0xd5, 0xd1, 0xa0, 0x1c, 0x26, 0x30, 0x9e,
+	0xe0, 0x7b, 0x7b, 0x48, 0xc6, 0x80, 0xcc, 0xac, 0xa3, 0x82, 0xb4, 0x9e, 0x58, 0x18, 0xdd, 0x23,
+	0xad, 0xea, 0xe4, 0x15, 0x43, 0x16, 0x78, 0x1d, 0xaf, 0xfb, 0x7f, 0xff, 0x6a, 0x7c, 0x92, 0x1c,
+	0x3f, 0x1f, 0xbc, 0x86, 0x0c, 0x9f, 0x01, 0xb2, 0x74, 0x91, 0x4f, 0x29, 0xa9, 0xab, 0x09, 0x64,
+	0x41, 0xad, 0xe3, 0x75, 0xdb, 0xa9, 0x5e, 0xd3, 0x1d, 0xd2, 0x54, 0xc8, 0xb0, 0x54, 0x81, 0xaf,
+	0x77, 0x6d, 0x14, 0x7d, 0x20, 0xe7, 0x1c, 0xf3, 0x29, 0x57, 0x48, 0xef, 0x9f, 0xe0, 0xee, 0xfe,
+	0x8d, 0x5b, 0xe5, 0xfe, 0x41, 0xed, 0x93, 0x06, 0x47, 0x18, 0xab, 0xa0, 0xd6, 0xf1, 0xd7, 0x7d,
+	0xe6, 0x50, 0xa9, 0x49, 0x8d, 0xde, 0x11, 0xea, 0xb6, 0x8e, 0x00, 0x53, 0x78, 0x5b, 0x82, 0x42,
+	0x1a, 0x92, 0x96, 0x1c, 0x0e, 0xa1, 0xe0, 0x62, 0xa4, 0x35, 0xb4, 0xd3, 0x45, 0x4c, 0x03, 0xf2,
+	0xdf, 0x14, 0x0a, 0xc5, 0xa5, 0xb0, 0xe5, 0xb9, 0xb0, 0xaa, 0x5a, 0xb0, 0x31, 0xd8, 0xfa, 0xf4,
+	0xba, 0xca, 0x66, 0x59, 0x26, 0x4b, 0x81, 0x41, 0xdd, 0x64, 0xdb, 0x30, 0x9a, 0x91, 0xcb, 0x8e,
+	0x7c, 0x08, 0x39, 0x20, 0xfc, 0x4b, 0xf8, 0x77, 0x8f, 0x5c, 0x5c, 0xee, 0xfa, 0x76, 0xec, 0x25,
+	0x8e, 0xbf, 0xc2, 0xa1, 0xd7, 0xc8, 0xf9, 0x9c, 0x0d, 0x20, 0x7f, 0x01, 0x39, 0x64, 0x28, 0x0b,
+	0xab, 0x63, 0x75, 0x93, 0x5e, 0x22, 0x8d, 0x9c, 0x8f, 0x39, 0x06, 0x8d, 0x8e, 0xd7, 0xf5, 0x53,
+	0x13, 0x54, 0x5a, 0x32, 0x29, 0x90, 0x8b, 0x12, 0x82, 0xa6, 0xd1, 0xe2, 0xe2, 0xe8, 0x9b, 0x77,
+	0xdc, 0xbd, 0x83, 0x02, 0xd8, 0xb6, 0xdd, 0xbb, 0x6d, 0x0d, 0xeb, 0xaf, 0x37, 0xdc, 0xc2, 0x39,
+	0xc6, 0xce, 0x6b, 0x7b, 0xdb, 0xff, 0x59, 0x27, 0x6d, 0x97, 0xac, 0xe8, 0x27, 0x8f, 0xd4, 0xb5,
+	0xaf, 0x6f, 0x6c, 0xfa, 0xe9, 0xd2, 0x1d, 0x84, 0x9d, 0xd3, 0x12, 0xa3, 0xfd, 0x8f, 0x3f, 0x7e,
+	0x7d, 0xa9, 0xdd, 0xa3, 0x77, 0x93, 0x69, 0x2f, 0xb1, 0x58, 0x95, 0xcc, 0xec, 0x6a, 0x9e, 0xb8,
+	0x81, 0xa1, 0x92, 0x99, 0xab, 0x7d, 0x9e, 0xcc, 0x6c, 0xad, 0x73, 0xfa, 0xd9, 0x23, 0xfe, 0x11,
+	0x20, 0xbd, 0xbe, 0x09, 0x74, 0xfc, 0x1a, 0xc2, 0x8d, 0xed, 0x88, 0x0e, 0xb5, 0x98, 0x87, 0xf4,
+	0xc1, 0x99, 0xc4, 0x24, 0xb3, 0xca, 0xa9, 0x5a, 0x53, 0xd3, 0x3c, 0x03, 0x7a, 0x73, 0x13, 0x6e,
+	0xe5, 0xa9, 0x84, 0x3b, 0xb1, 0x99, 0x6c, 0xb1, 0x9b, 0x6c, 0xf1, 0xe3, 0x6a, 0xb2, 0x39, 0x4d,
+	0xb7, 0xb6, 0xd3, 0xf4, 0xd5, 0x23, 0x4d, 0x63, 0xae, 0xcd, 0x9a, 0x56, 0x0c, 0x78, 0x4a, 0xb7,
+	0x0e, 0xb4, 0xb2, 0xfd, 0xe8, 0x6c, 0x57, 0xb7, 0xa7, 0xbd, 0xf7, 0xa8, 0xfe, 0xb2, 0x36, 0xed,
+	0x0d, 0x9a, 0xba, 0xe8, 0x3b, 0xbf, 0x03, 0x00, 0x00, 0xff, 0xff, 0xb8, 0x37, 0xad, 0x01, 0x20,
+	0x06, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
